added gain matrix

--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -468,8 +468,17 @@ Satisfaction des contraintes :
 TODO : Analyser résultats 
 
 \section{Point de vue du Responsable d'entreprise : programmation linéaire multicritère}
-
-
+Nous avons défini la matrice de gain suivante:
+\begin{align*}
+Matrice de Gain =
+ \begin{pmatrix}
+  10512,33	&357,09	&1691,28 &316,28& 9579,59 &4800 &4779,59\\
+9712,21	&378,81	&1833,81	&187,96	&9117,65	&4800	&4317,65\\
+5256,17	&188,74	&768,71	&188,74	&9024,83	&4512,41	&4512,41\\
+6919,71	&373,08	&1828,08	&0	&8518,85	&4716,92	&3801,92\\
+5256,17	&275,38	&1376,92 &74,62	&2182,69   &1178,84 &1003,84
+ \end{pmatrix}
+\end{align*}
 \section{Sélection du meilleur plan de production : analyse multicritère}
 Suite aux études précédentes et aux différentes discussions, nous avons retenu 8 propositions de gestion d'atelier.
 L'entreprise s'est entendue sur 4 critères à considérer pour décider du meilleur plan de production : le bénéfice, la gestion du stock, l'équilibre commercial (Proposer une diversité de produits) et le taux d'utilisation de certaines machines délicates.
