--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -5,6 +5,7 @@
 \usepackage[frenchb]{babel}
 %\usepackage{fontenc}
 %amazing maths packages
+\usepackage{array}
 \usepackage{amsmath}
 \usepackage{ragged2e}
 \usepackage{tcolorbox}
@@ -483,35 +484,6 @@ Matrice de Gain =
 Suite aux études précédentes et aux différentes discussions, nous avons retenu 8 propositions de gestion d'atelier.
 L'entreprise s'est entendue sur 4 critères à considérer pour décider du meilleur plan de production : le bénéfice, la gestion du stock, l'équilibre commercial (Proposer une diversité de produits) et le taux d'utilisation de certaines machines délicates.
 
-Nous avons attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (Raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
-Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc les résultats suivants :\newline
-\begin{center}
-\begin{tabular}{|c|c|c|c|c|}
-\hline 
-Critère & g1 & g2 & g3 & g4 \\ 
-\hline 
-Coefficient & 5 & 3 & 3 & 2 \\ 
-\hline 
-Echelle & 0 $ \Rightarrow $ 10 & 2 $ \Rightarrow $ 8 & 2 $ \Rightarrow $ 8 & 3 $ \Rightarrow $ 7 \\ 
-\hline 
-a & 6 & 5 & 5 & 5 \\ 
-\hline 
-b & 5 & 4.4 & 7.4 & 4.2 \\ 
-\hline 
-c & 3 & 4.4 & 6.2 & 4.2 \\ 
-\hline 
-d & 3 & 6.2 & 5 & 4.6 \\ 
-\hline 
-e & 5 & 4.4 & 3.8 & 6.6 \\ 
-\hline 
-f & 2 & 5 & 6.2 & 4.2 \\ 
-\hline 
-g & 5 & 4.4 & 3.2 & 6.6 \\ 
-\hline 
-h & 3 & 5 & 6.2 & 4.6 \\ 
-\hline 
-\end{tabular} 
-\end{center}
 Pour résoudre ce problème et trouver la meilleure solution possible, nous avons utilisé la méthode \emph{Electre 1}.
 Dans un premier temps, nous avons déterminé les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
 \begin{description}
@@ -519,34 +491,67 @@ Dans un premier temps, nous avons déterminé les dominances fortes sur les crit
 \item[•] e domine g
 \item[•] h domine f
 \end{description}
-Nous avons ensuite calculé les matrices de concordance et de discordance.
-\begin{center}
-$
-\textbf{Matrice de Concordance} = 
-\left( 
-\begin{array}{ccccc}
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & •
-\end{array}
-\right) 
-$
+Nous avons ensuite calculé les matrices de concordance et de discordance, une première fois sans affecter de poids aux différents critères:
+\begin{align*}
+M_{concordance} =
+ \begin{pmatrix}
+  4	&3	&3	&3	&3\\
+  1	&4	&2	&3	&2\\
+  2	&2	&4	&2	&3\\
+  1	&3	&2	&4	&2\\
+  2	&2	&3	&2	&4\\
+ \end{pmatrix}& \quad
+ M_{discordance} =
+ \begin{pmatrix}
+  0	&4	&2	&4	&2\\
+  2	&0	&3	&6	&1\\
+  3	&4	&0	&5	&2\\
+  2	&6	&3	&0	&4\\
+  3	&2	&2	&5	&0\\
+ \end{pmatrix}
+\end{align*} 
 
-$
-\textbf{Matrice de Discordance} = 
-\left( 
-\begin{array}{ccccc}
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & •
-\end{array}
-\right) 
-$
+
+Nous avons ensuite attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (Raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
+Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc une nouvelle matrice de jugements, ainsi que de nouvelles matrices de concordance et de discordance :
+\begin{center}
+\newcolumntype{M}{>{\centering\arraybackslash} m{1.5cm} }
+\newcolumntype{L}{>{\centering\arraybackslash} m{1.75cm} }
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{|L|M|M|M|M|}
+\hline 
+Critère & g1 & g2 & g3 & g4 \\\hline  
+Coefficient & 5 & 3 & 3 & 2 \\ \hline 
+Echelle & 0 $ \Rightarrow $ 10 & 2 $ \Rightarrow $ 8 & 2 $ \Rightarrow $ 8 & 3 $ \Rightarrow $ 7 \\ \hline 
+a & 6 & 5 & 5 & 5 \\ \hline 
+b & 5 & 4.4 & 7.4 & 4.2 \\ \hline 
+c & 3 & 4.4 & 6.2 & 4.2 \\ \hline 
+d & 3 & 6.2 & 5 & 4.6 \\ \hline 
+e & 5 & 4.4 & 3.8 & 6.6 \\ \hline 
+f & 2 & 5 & 6.2 & 4.2 \\ \hline 
+g & 5 & 4.4 & 3.2 & 6.6 \\ \hline 
+h & 3 & 5 & 6.2 & 4.6 \\ 
+\hline 
+\end{tabular} 
 \end{center}
+\begin{align*}
+M_{concordance} =
+ \begin{pmatrix}
+  4	&3	&3	&3	&3\\
+1	&4	&2	&3	&2\\
+2	&2	&4	&2	&3\\
+1	&3	&2	&4	&2\\
+2	&2	&3	&2	&4
+ \end{pmatrix}& \quad
+ M_{discordance} =
+ \begin{pmatrix}
+ 0,00	&2,40 &1,20 &1,60 &1,20\\
+ 1,00   &0,00 &1,80	&2,40 &0,60\\
+ 3,00	&2,40 &0,00 &2,00 &1,20\\
+ 1,20	&3,60	&1,80 &0,00	&2,40\\
+ 3,00	&2,00	&1,20  &2,00  &0,00
+ \end{pmatrix}
+\end{align*}
 Après plusieurs itérations, nous avons choisi les seuils suivants :
 \begin{description}
 \item[$C_{1}$] = Seuil de concordance = 
