--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -5,6 +5,7 @@
 \usepackage[frenchb]{babel}
 %\usepackage{fontenc}
 %amazing maths packages
+\usepackage{array}
 \usepackage{amsmath}
 \usepackage{ragged2e}
 \usepackage{tcolorbox}
@@ -129,7 +130,7 @@ Nous présenterons pour chaque responsable 3 résultats significatifs permettant
 Deux critères nous semblent limitants d'un point de vue de la production. En effet, les machines ne peuvent fonctionner qu'en présence des ouvriers et leurs horaires de travail sont limités. Il convient donc de limiter les temps d'utilisation de chacune d'elles.
 En prenant en compte les durées de production respectives de chacun des produits sur les différentes machines, on introduit les 7 contraintes suivantes :
 \begin{equation*}
-\left.
+\left\{
 \begin{aligned}
     8x_{A} + 15x_{B} + 0x_{C} + 5x_{D} + 0x_{E} + 10x_{F} &\leq 4800
     \quad\\
@@ -140,17 +141,17 @@ En prenant en compte les durées de production respectives de chacun des produit
       5x_{A} + 5x_{B} + 3x_{C} + 12x_{D} + 8x_{E} + 0x_{F} &\leq 4800 \\
       5x_{A} + 3x_{B} + 5x_{C} + 8x_{D} + 0x_{E} + 7x_{F} &\leq 4800 
 \end{aligned}
-\right\}
+\right.
 \end{equation*}
 De plus, la production est limitée par les matières premières. De fait, en appliquant les pondérations associées, on trouve :
 \begin{equation*}
-\left.
+\left\{
 \begin{aligned}
          1x_{A} + 2x_{B} + 1x_{C} + 5x_{D} + 0x_{E} + 2x_{F} &\leq 350 \quad\\
       2x_{A} + 2x_{B} + 1x_{C} + 2x_{D} + 2x_{E} + 2x_{F} &\leq 620 \\
       1x_{A} + 0x_{B} + 3x_{C} + 2x_{D} + 2x_{E} + 0x_{F} &\leq 485 \\
 \end{aligned}
-\right\}
+\right.
 \end{equation*}
 Par ailleurs, nous devons ajouter des contraintes de domaines. En effet, la production ne peut pas être négative. Nous avons donc :
 \(x_{A} \geq 0\), \(x_{B} \geq\), \(x_{C} \geq 0\), \(x_{D} \geq 0\), \(x_{E} \geq 0\), \(x_{F} \geq 0 \).
@@ -442,9 +443,9 @@ La résolution mathématique de ce problème de programmation linéaire donne le
    \right )
  } 
 \end{equation*}
-TODO : Analyser résultats.
+On constate qu'il est préférable de fabriquer les produits B et E. En effet, le produit B ne demande qu'une minute de temps d'utilisation cumulé sur les 2 machines, il semble donc correspondre au mieux aux critères. La production seule de ce produits ne permettant pas d'atteindre le seuil de rentabilité défini précédemment, il est nécessaire de produire une autre gamme. Malgré son fort taux d'utilisation, le produit E a été choisi pour compléter la production. L'analyse de la satisfaction des contraintes nous permet de comprendre cette préférence.
 \begin{align*}
-\textbf{Usage minimal des machines en ?? = 2182.7}
+\textbf{Usage minimal des machines en min = 2182.7}
 \end{align*}
 Satisfaction des contraintes : 
 \begin{align*}
@@ -465,8 +466,8 @@ Satisfaction des contraintes :
    \right )
  } 
 \end{align*}
-TODO : Analyser résultats 
-
+Bien que le produit B ait été préférable, sa production est limitée par la quantité de matière première 1 (Contrainte nulle). Il a donc fallu compléter la production avec un produit n'utilisant pas cette matière, seul le produit E correspond à ce critère d'où sa production en second choix.
+Comme pour le cas du responsable des Stocks, il est encore possible d'augmenter la production (MP 2 et 3 ne sont pas écoulées). Néanmoins, le plan de production donné ici respecte la contrainte de minimum de chiffre d'affaire donnée en début de partie.
 \section{Point de vue du Responsable d'entreprise : programmation linéaire multicritère}
 Nous avons défini la matrice de gain suivante:
 \begin{align*}
@@ -483,35 +484,6 @@ Matrice de Gain =
 Suite aux études précédentes et aux différentes discussions, nous avons retenu 8 propositions de gestion d'atelier.
 L'entreprise s'est entendue sur 4 critères à considérer pour décider du meilleur plan de production : le bénéfice, la gestion du stock, l'équilibre commercial (Proposer une diversité de produits) et le taux d'utilisation de certaines machines délicates.
 
-Nous avons attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (Raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
-Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc les résultats suivants :\newline
-\begin{center}
-\begin{tabular}{|c|c|c|c|c|}
-\hline 
-Critère & g1 & g2 & g3 & g4 \\ 
-\hline 
-Coefficient & 5 & 3 & 3 & 2 \\ 
-\hline 
-Echelle & 0 $ \Rightarrow $ 10 & 2 $ \Rightarrow $ 8 & 2 $ \Rightarrow $ 8 & 3 $ \Rightarrow $ 7 \\ 
-\hline 
-a & 6 & 5 & 5 & 5 \\ 
-\hline 
-b & 5 & 4.4 & 7.4 & 4.2 \\ 
-\hline 
-c & 3 & 4.4 & 6.2 & 4.2 \\ 
-\hline 
-d & 3 & 6.2 & 5 & 4.6 \\ 
-\hline 
-e & 5 & 4.4 & 3.8 & 6.6 \\ 
-\hline 
-f & 2 & 5 & 6.2 & 4.2 \\ 
-\hline 
-g & 5 & 4.4 & 3.2 & 6.6 \\ 
-\hline 
-h & 3 & 5 & 6.2 & 4.6 \\ 
-\hline 
-\end{tabular} 
-\end{center}
 Pour résoudre ce problème et trouver la meilleure solution possible, nous avons utilisé la méthode \emph{Electre 1}.
 Dans un premier temps, nous avons déterminé les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
 \begin{description}
@@ -519,35 +491,68 @@ Dans un premier temps, nous avons déterminé les dominances fortes sur les crit
 \item[•] e domine g
 \item[•] h domine f
 \end{description}
-Nous avons ensuite calculé les matrices de concordance et de discordance.
-\begin{center}
-$
-\textbf{Matrice de Concordance} = 
-\left( 
-\begin{array}{ccccc}
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & •
-\end{array}
-\right) 
-$
+Nous avons ensuite calculé les matrices de concordance et de discordance, une première fois sans affecter de poids aux différents critères:
+\begin{align*}
+M_{concordance} =
+ \begin{pmatrix}
+  4	&3	&3	&3	&3\\
+  1	&4	&2	&3	&2\\
+  2	&2	&4	&2	&3\\
+  1	&3	&2	&4	&2\\
+  2	&2	&3	&2	&4\\
+ \end{pmatrix}& \quad
+ M_{discordance} =
+ \begin{pmatrix}
+  0	&4	&2	&4	&2\\
+  2	&0	&3	&6	&1\\
+  3	&4	&0	&5	&2\\
+  2	&6	&3	&0	&4\\
+  3	&2	&2	&5	&0\\
+ \end{pmatrix}
+\end{align*} 
 
-$
-\textbf{Matrice de Discordance} = 
-\left( 
-\begin{array}{ccccc}
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & • \\ 
-• & • & • & • & •
-\end{array}
-\right) 
-$
+
+Nous avons ensuite attribué un poids à chacun de ces critères en jugeant de leur importance relative. Nous privilégions principalement le bénéfice (Raison d'être de l'entreprise). Nous avons ensuite décider de pondérer de la même manière les critères 2 et 3, que nous jugeons de même importance. Quant au critère 4, nous le considérons comme le moins important, les opérateurs pouvant être formés à l'utilisation de ces machines.
+Pour notre analyse, nous avons réévalué les notes de chaque critère afin de correspondre à une échelle plus adaptée. Nous obtenons donc une nouvelle matrice de jugements, ainsi que de nouvelles matrices de concordance et de discordance :
+\begin{center}
+\newcolumntype{M}{>{\centering\arraybackslash} m{1.5cm} }
+\newcolumntype{L}{>{\centering\arraybackslash} m{1.75cm} }
+\renewcommand{\arraystretch}{1.2}
+\begin{tabular}{|L|M|M|M|M|}
+\hline 
+Critère & g1 & g2 & g3 & g4 \\\hline  
+Coefficient & 5 & 3 & 3 & 2 \\ \hline 
+Echelle & 0 $ \Rightarrow $ 10 & 2 $ \Rightarrow $ 8 & 2 $ \Rightarrow $ 8 & 3 $ \Rightarrow $ 7 \\ \hline 
+a & 6 & 5 & 5 & 5 \\ \hline 
+b & 5 & 4.4 & 7.4 & 4.2 \\ \hline 
+c & 3 & 4.4 & 6.2 & 4.2 \\ \hline 
+d & 3 & 6.2 & 5 & 4.6 \\ \hline 
+e & 5 & 4.4 & 3.8 & 6.6 \\ \hline 
+f & 2 & 5 & 6.2 & 4.2 \\ \hline 
+g & 5 & 4.4 & 3.2 & 6.6 \\ \hline 
+h & 3 & 5 & 6.2 & 4.6 \\ 
+\hline 
+\end{tabular} 
 \end{center}
-Après plusieurs itérations, nous avons choisi les seuils suivants :
+\begin{align*}
+M_{concordance} =
+ \begin{pmatrix}
+  4	&3	&3	&3	&3\\
+1	&4	&2	&3	&2\\
+2	&2	&4	&2	&3\\
+1	&3	&2	&4	&2\\
+2	&2	&3	&2	&4
+ \end{pmatrix}& \quad
+ M_{discordance} =
+ \begin{pmatrix}
+ 0,00	&2,40 &1,20 &1,60 &1,20\\
+ 1,00   &0,00 &1,80	&2,40 &0,60\\
+ 3,00	&2,40 &0,00 &2,00 &1,20\\
+ 1,20	&3,60	&1,80 &0,00	&2,40\\
+ 3,00	&2,00	&1,20  &2,00  &0,00
+ \end{pmatrix}
+\end{align*}
+Durant les itérations, nous avons choisi les seuils suivants :
 \begin{description}
 \item[$C_{1}$] = Seuil de concordance = 
 \item[$C_{2}$] = Seuil de discordance = 
