replaced ugly bullets :D

--- a/Compte-Rendu/aide-decision.tex
+++ b/Compte-Rendu/aide-decision.tex
@@ -486,11 +486,11 @@ L'entreprise s'est entendue sur 4 critères à considérer pour décider du meil
 
 Pour résoudre ce problème et trouver la meilleure solution possible, nous avons utilisé la méthode \emph{Electre 1}.
 Dans un premier temps, nous avons déterminé les dominances fortes sur les critères précédents. Ainsi, nous avons déterminé que :
-\begin{description}
-\item[•]b et h dominent c
-\item[•] e domine g
-\item[•] h domine f
-\end{description}
+\begin{itemize}
+\item \textbf{\emph{b}} et \textbf{\emph{h}} dominent \textbf{\emph{c}}
+\item \textbf{\emph{e}} domine \textbf{\emph{g}}
+\item \textbf{\emph{h}} domine \textbf{\emph{f}}
+\end{itemize}
 Nous avons ensuite calculé les matrices de concordance et de discordance, une première fois sans affecter de poids aux différents critères:
 \begin{align*}
 M_{concordance} =
